Refactor game function and place it in event listener

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button id="Rock">Rock</button>
         <button id="Paper">Paper</button>
         <button id="Scissors">Scissors</button>
-        <script src="javascript.js" defer></script>
+        <script src="javascript.js"></script>
     </div>
 </body>
 
